# stock-tracker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/adr/: 0001-architecture-clean-architecture.md  0002-sbi-csv-format.md  0003-dividend-yield-calculation.md
src/stock_tracker/: __main__.py
src/stock_tracker/application/dtos/: portfolio_row_dto.py
src/stock_tracker/application/use_cases/: analyze_portfolio.py
src/stock_tracker/domain/entities/: holding.py  stock_info.py
src/stock_tracker/domain/repositories/: holdings_repository.py  stock_info_repository.py
src/stock_tracker/domain/value_objects/: money.py  percentage.py  ticker.py
src/stock_tracker/infrastructure/cache/: file_cache_stock_info_repository.py
src/stock_tracker/infrastructure/csv/: sbi_csv_reader.py
src/stock_tracker/infrastructure/yfinance/: yfinance_calculators.py  yfinance_converters.py  yfinance_stock_info_repository.py
src/stock_tracker/presentation/: cli.py  json_renderer.py  rich_table_renderer.py
tests/application/: test_analyze_portfolio.py
tests/domain/: test_entities.py  test_value_objects.py
tests/infrastructure/: test_file_cache.py  test_sbi_csv_reader.py  test_yfinance_calculators.py
tests/infrastructure/fixtures/: sample_sbi.csv  sample_sbi_format_b.csv
