[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-tracker"
version = "0.1.0"
description = "Japanese stock portfolio analyzer for SBI Securities"
requires-python = ">=3.14"
dependencies = [
    "yfinance>=0.2.40",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.9.0",
]

[project.scripts]
stock-tracker = "stock_tracker.presentation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_tracker"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
